# Copyright (C) 2021 Huawei Device Co., Ltd. All rights reserved.

import("//build/ohos.gni")

config("libpsl_config") {
    cflags = [
        "-DHAVE_CONFIG_H",
        "-Wno-sign-compare"
    ]
}

ohos_source_set("psl_dynamic") {
    sources = [
        "src/psl.c",
        "src/lookup_string_in_fixed_set.c"
    ]

    configs = [":libpsl_config"]
    include_dirs = [
        "//third_party/libpsl",
        "//third_party/libpsl/include",
    ]
}

ohos_shared_library("libpsl") {
    deps = [
        ":psl_dynamic",
    ]
    part_name = "multimedia_histreamer"
    subsystem_name = "multimedia"
}